# real-time-ml-system

./: .envrc  .gitignore  Makefile  pyproject.toml
deployment/dev/candles/: candles.yaml
deployment/dev/kind/: create_cluster.sh  install_kafka.sh  install_kafka_ui.sh
docker/: candles.Dockerfile  trades.Dockerfile
services/candles/: pyproject.toml  settings.env
services/candles/src/candles/: config.py  main.py
services/trades/: pyproject.toml  settings.env
services/trades/src/trades/: __init__.py  config.py  kraken_api.py  main.py
